--- a/Index.html
+++ b/Index.html
@@ -33,16 +33,16 @@
 				<b style="color: white;">Test Image - </b><img src="bottle.jpeg" class="img-responsive">
 			</li>
 			<h5 class="col-sm-4 col-xs-12" >Output on <b>GOOGLE LENS</b> -
-				<span></span>  
+				<span>  Water bottle</span>  
 			</h5>
 			<h5 class="col-sm-4 col-xs-12">Output on <b>Mobilenet Model </b> -
-				<span></span>  
+				<span>Water bottle</span>  
 			</h5>
 
 			<div class="bob3" class="col-xs-12">
-				<h4>Result - </h4>
+				<h4>Winner - </h4>
 				<hr>
-				<h4></h4>
+				<h4>----Draw----</h4>
 			</div>
 
 		</div>
@@ -54,14 +54,14 @@
 				<b style="color: white;">Test Image - </b><img src="shoes.jpeg" class="img-responsive">
 			</li>
 			<h5 class="col-sm-4 col-xs-12" >Output on <b>GOOGLE LENS</b> -
-				<span></span>  
+				<span>Canvas shoes</span>  
 			</h5>
 			<h5 class="col-sm-4 col-xs-12">Output on <b>Mobilenet Model </b> -
-				<span></span>  
+				<span>Sport shoes</span>  
 			</h5>
 
 			<div class="bob3" class="col-xs-12">
-				<h4>Result - </h4>
+				<h4>Winner - Google Lens</h4>
 				<hr>
 				<h4></h4>
 			</div>
@@ -76,14 +76,14 @@
 				<b style="color: white;">Test Image - </b><img src="headphone.jpeg" class="img-responsive">
 			</li>
 			<h5 class="col-sm-4 col-xs-12" >Output on <b>GOOGLE LENS</b> -
-				<span></span>  
+				<span>Headphone</span>  
 			</h5>
 			<h5 class="col-sm-4 col-xs-12">Output on <b>Mobilenet Model </b> -
-				<span></span>  
+				<span>airpods</span>  
 			</h5>
 
 			<div class="bob3" class="col-xs-12">
-				<h4>Result - </h4>
+				<h4>Winner - Google Lens</h4>
 				<hr>
 				<h4></h4>
 			</div>
@@ -98,14 +98,14 @@
 				<b style="color: white;">Test Image - </b><img src="toy.jpeg" class="img-responsive">
 			</li>
 			<h5 class="col-sm-4 col-xs-12" >Output on <b>GOOGLE LENS</b> -
-				<span></span>  
+				<span>Stuffed animal toy</span>  
 			</h5>
 			<h5 class="col-sm-4 col-xs-12">Output on <b>Mobilenet Model </b> -
-				<span></span>  
+				<span>Ski mask</span>  
 			</h5>
 
 			<div class="bob3" class="col-xs-12">
-				<h4>Result - </h4>
+				<h4>Winner - Google Lens</h4>
 				<hr>
 				<h4></h4>
 			</div>
@@ -120,14 +120,14 @@
 				<b style="color: white;">Test Image - </b><img src="bed.jpeg" class="img-responsive">
 			</li>
 			<h5 class="col-sm-4 col-xs-12" >Output on <b>GOOGLE LENS</b> -
-				<span></span>  
+				<span>Pillow bed blanket</span>  
 			</h5>
 			<h5 class="col-sm-4 col-xs-12">Output on <b>Mobilenet Model </b> -
-				<span></span>  
+				<span>Tub</span>  
 			</h5>
 
 			<div class="bob3" class="col-xs-12">
-				<h4>Result - </h4>
+				<h4>Winner - Google Lens</h4>
 				<hr>
 				<h4></h4>
 			</div>
@@ -140,6 +140,7 @@
 	</ol>
 <br><br>
 	<h4 class="col-xs-12 result">
+        <b>Google Lens</b> predicted 5/5 images correctly while <b>Mobilenet</b> predicted 1/5 images correctly. <b>Google Lens is more accurate</b>
 	 </h4>
 </div>
 <br><br>
